--- a/app/templates/app/banff.html
+++ b/app/templates/app/banff.html
@@ -63,7 +63,7 @@ Lake Louise Ski Resort has recently added a new chairlift, the Summit Quad, whic
             </div>
         </div>
     <div class="alert-msg" style="text-align: left;"></div>
-                                <button  name="btnS" class="genric-btn primary" style="float: right;margin-top: 25px;margin-right: 1000px;" type="submit">BOOK NOW</button>
+{#                                <button href="{% url 'app:package' %}"  name="btnS" class="genric-btn primary" style="float: right;margin-top: 25px;margin-right: 1000px;" type="submit">BOOK NOW</button>#}
     </section>
 
 
