--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -13,8 +13,8 @@
                     <h1 class="text-white">
                         Contact Us
                     </h1>
-                    <p class="text-white link-nav"><a href="{% url 'app:index' %}">Home </a> <span
-                            class="lnr lnr-arrow-right"></span> <a href={% url 'app:contact' %}> Contact Us</a></p>
+{#                    <p class="text-white link-nav"><a href="{% url 'app:index' %}">Home </a> <span#}
+{#                            class="lnr lnr-arrow-right"></span> <a href={% url 'app:contact' %}> Contact Us</a></p>#}
                 </div>
             </div>
         </div>
