--- a/app/templates/app/quebec.html
+++ b/app/templates/app/quebec.html
@@ -1,7 +1,7 @@
 {% extends 'app/base.html' %}
 
-    <!DOCTYPE html>
-    <html lang="zxx" class="no-js">
+<!DOCTYPE html>
+<html lang="zxx" class="no-js">
 
 {% block start %}
     <!-- start banner Area -->
@@ -13,8 +13,8 @@
                     <h1 class="text-white">
                         About Quebec
                     </h1>
-{#                    <p class="text-white link-nav"><a href="index.html">Home </a> <span#}
-{#                            class="lnr lnr-arrow-right"></span> <a href="about.html"> About Us</a></p>#}
+                    {#                    <p class="text-white link-nav"><a href="index.html">Home </a> <span#}
+                    {#                            class="lnr lnr-arrow-right"></span> <a href="about.html"> About Us</a></p>#}
                 </div>
             </div>
         </div>
@@ -22,8 +22,8 @@
     <!-- End banner Area -->
 
     <!-- Start about-info Area -->
-    <section class="about-info-area section-gap" >
-        <div class="container" style="padding-top: 20px" >
+    <section class="about-info-area section-gap">
+        <div class="container" style="padding-top: 20px">
             <div class="row align-items-center">
                 <div class="col-lg-6 info-left">
                     <img class="img-fluid" src="/staticfiles/img/locationinfo/L3.jpg" alt="">
@@ -43,7 +43,7 @@
         </div>
     </section>
 
-        <!-- Start about-info Area -->
+    <!-- Start about-info Area -->
     <section class="about-info-area section-gap">
         <div class="container">
             <div class="row align-items-center">
@@ -63,17 +63,13 @@
                 </div>
             </div>
         </div>
-{#                            <div class="col-lg-12">#}
-{#                                {% for package_obj in package_objs %}#}
-                                <div class="alert-msg" style="text-align: left;"></div>
-{#                                    <ul class="package-list">#}
-{#                                    <li class="d-flex justify-content-between align-center">#}
-{#                                    <a href="{% url 'app:booking' package_obj.uuid %}" class="Book Now-btn" style="background: #808B96; margin-left: 126px;padding: 4px;color: white;">Book Now</a>#}
-{#                                    </li> </ul>#}
-                                <button  name="btnS" class="genric-btn primary" style="float: right;margin-top: 25px;margin-right: 1000px;" type="submit">BOOK NOW</button>
+{#        <button href="{% url 'app:package' %}" name="btnS" class="genric-btn primary"#}
+{#                style="float: right;margin-top: 25px;margin-right: 1000px;"#}
+{#                type="submit">Go to packages to book!!#}
+{#        </button>#}
 
-{#                                {% endfor %}#}
-{#                            </div>#}
+        {#                                {% endfor %}#}
+        {#                            </div>#}
     </section>
 
 
@@ -81,9 +77,9 @@
 
     <!-- Start testimonial Area -->
 
-{#                                    <li class="d-flex justify-content-between align-center">#}
-{#                                    <a href="{% url 'app:booking' package_obj.uuid %}" class="Book Now-btn" style="background: #808B96; margin-left: 126px;padding: 4px;color: white;">Book Now</a>#}
-{#                                    </li>#}
+    {#                                    <li class="d-flex justify-content-between align-center">#}
+    {#                                    <a href="{% url 'app:booking' package_obj.uuid %}" class="Book Now-btn" style="background: #808B96; margin-left: 126px;padding: 4px;color: white;">Book Now</a>#}
+    {#                                    </li>#}
     <!-- End testimonial Area -->
 
     <!-- start footer Area -->
