--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -49,102 +49,40 @@
                 <div class="menu-content pb-70 col-lg-8">
                     <div class="title text-center">
                         <h1 class="mb-10">We Provide Affordable Prices</h1>
-                        <p>Well educated, intellectual people, especially scientists at all times demonstrate
-                            considerably.</p>
+                        <p>Anyone and everyone can create memories with Traveloholic</p>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4">
+                <div  style="margin-left: 370px" class="col-lg-4">
                     <div class="single-price">
                         <h4>Cheap Packages</h4>
                         <ul class="price-list">
                             <li class="d-flex justify-content-between align-items-center">
-                                <span>New York</span>
-                                <a href="#" class="price-btn">$1500</a>
+                                <span>Blue Mountains</span>
+                                <a href="{% url 'app:package' %}" class="price-btn">View</a>
                             </li>
                             <li class="d-flex justify-content-between align-items-center">
-                                <span>Maldives</span>
-                                <a href="#" class="price-btn">$1500</a>
+                                <span>Kingston</span>
+                                <a href="{% url 'app:package' %}" class="price-btn">View</a>
                             </li>
                             <li class="d-flex justify-content-between align-items-center">
-                                <span>Sri Lanka</span>
-                                <a href="#" class="price-btn">$1500</a>
+                                <span>Ottawa</span>
+                                <a href="{% url 'app:package' %}" class="price-btn">View</a>
                             </li>
                             <li class="d-flex justify-content-between align-items-center">
-                                <span>Nepal</span>
-                                <a href="#" class="price-btn">$1500</a>
+                                <span>Thunder Bay</span>
+{#                                    <a href="{% url 'app:booking' %}" class="price-btn">$1500</a>#}
+                                <a href="{% url 'app:package' %}" class="price-btn">View</a>
                             </li>
                             <li class="d-flex justify-content-between align-items-center">
-                                <span>Thiland</span>
-                                <a href="#" class="price-btn">$1500</a>
+                                <span>Cobourg</span>
+                                <a href="{% url 'app:package' %}" class="price-btn">View</a>
                             </li>
-                            <li class="d-flex justify-content-between align-items-center">
-                                <span>Singapore</span>
-                                <a href="#" class="price-btn">$1500</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="single-price">
-                        <h4>Luxury Packages</h4>
-                        <ul class="price-list">
-                            <li class="d-flex justify-content-between align-items-center">
-                                <span>New York</span>
-                                <a href="#" class="price-btn">$1500</a>
-                            </li>
-                            <li class="d-flex justify-content-between align-items-center">
-                                <span>Maldives</span>
-                                <a href="#" class="price-btn">$1500</a>
-                            </li>
-                            <li class="d-flex justify-content-between align-items-center">
-                                <span>Sri Lanka</span>
-                                <a href="#" class="price-btn">$1500</a>
-                            </li>
-                            <li class="d-flex justify-content-between align-items-center">
-                                <span>Nepal</span>
-                                <a href="#" class="price-btn">$1500</a>
-                            </li>
-                            <li class="d-flex justify-content-between align-items-center">
-                                <span>Thiland</span>
-                                <a href="#" class="price-btn">$1500</a>
-                            </li>
-                            <li class="d-flex justify-content-between align-items-center">
-                                <span>Singapore</span>
-                                <a href="#" class="price-btn">$1500</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="single-price">
-                        <h4>Camping Packages</h4>
-                        <ul class="price-list">
-                            <li class="d-flex justify-content-between align-items-center">
-                                <span>New York</span>
-                                <a href="#" class="price-btn">$1500</a>
-                            </li>
-                            <li class="d-flex justify-content-between align-items-center">
-                                <span>Maldives</span>
-                                <a href="#" class="price-btn">$1500</a>
-                            </li>
-                            <li class="d-flex justify-content-between align-items-center">
-                                <span>Sri Lanka</span>
-                                <a href="#" class="price-btn">$1500</a>
-                            </li>
-                            <li class="d-flex justify-content-between align-items-center">
-                                <span>Nepal</span>
-                                <a href="#" class="price-btn">$1500</a>
-                            </li>
-                            <li class="d-flex justify-content-between align-items-center">
-                                <span>Thiland</span>
-                                <a href="#" class="price-btn">$1500</a>
-                            </li>
-                            <li class="d-flex justify-content-between align-items-center">
-                                <span>Singapore</span>
-                                <a href="#" class="price-btn">$1500</a>
-                            </li>
+{#                            <li class="d-flex justify-content-between align-items-center">#}
+{#                                <span>Singapore</span>#}
+{#                                <a href="{% url 'app:info3' %}" class="price-btn">$1500</a>#}
+{#                            </li>#}
                         </ul>
                     </div>
                 </div>
@@ -154,5 +92,4 @@
     <!-- End price Area -->
 
 {% endblock %}
-</body>
 </html>
