--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -17,16 +17,16 @@
     <!-- Site Title -->
     <title>Travel</title>
     {% block start %}
-    <link href="{% static 'css/animate.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/linearicons.css' %}" rel="stylesheet">
-    <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/magnific-popup.css' %}" rel="stylesheet">
-    <link href="{% static 'css/jquery-ui.css' %}" rel="stylesheet">
-    <link href="{% static 'css/nice-select.css' %}" rel="stylesheet">
-    <link href="{% static 'css/owl.carousel.css' %}" rel="stylesheet">
-    <link href="{% static 'css/main.css' %}" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
+        <link href="{% static 'css/animate.min.css' %}" rel="stylesheet">
+        <link href="{% static 'css/linearicons.css' %}" rel="stylesheet">
+        <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
+        <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+        <link href="{% static 'css/magnific-popup.css' %}" rel="stylesheet">
+        <link href="{% static 'css/jquery-ui.css' %}" rel="stylesheet">
+        <link href="{% static 'css/nice-select.css' %}" rel="stylesheet">
+        <link href="{% static 'css/owl.carousel.css' %}" rel="stylesheet">
+        <link href="{% static 'css/main.css' %}" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
     {% endblock %}
 </head>
 <body>
@@ -46,7 +46,7 @@
         <div class="row align-items-center justify-content-between d-flex">
             <div id="logo">
                 <a href="index.html" style="color: aqua;font-size: 20px;font-weight: bolder;">Traveloholic</a>
-{#                <a href="index.html"><img src="/staticfiles/img/traveloholic.png" height="50px" width="70px" alt="" title=""/></a>#}
+                {#                <a href="index.html"><img src="/staticfiles/img/traveloholic.png" height="50px" width="70px" alt="" title=""/></a>#}
             </div>
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
@@ -56,7 +56,7 @@
                     <li><a href="{% url 'app:hotels' %}">Hotels</a></li>
                     <li><a href="{% url 'app:contact' %}">Contact Us</a></li>
                     <li><a href="{% url 'app:users-profile' %}">User Profile</a></li>
-                     <li><a href="{% url 'app:logout' %}">Logout</a></li>
+                    <li><a href="{% url 'app:logout' %}">Logout</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
         </div>
@@ -76,7 +76,7 @@
                     We take care of your travel and do our best to make sure you get the best journey
                 </p>
                 <h3 class="h3 text-white">It's Time To Travel Canada</h3><br><br>
-                <a href="{% url 'app:about' %}" class="primary-btn text-uppercase" >Get Started</a>
+                <a href="{% url 'app:hotel' %}" class="primary-btn text-uppercase">Get Started</a>
             </div>
         </div>
     </div>
@@ -90,8 +90,7 @@
             <div class="menu-content pb-70 col-lg-8">
                 <div class="title text-center">
                     <h1 class="mb-10">Popular Destinations</h1>
-                    <p>We all live in an age that belongs to the young at heart. Life that is becoming extremely fast,
-                        day.</p>
+
                 </div>
             </div>
         </div>
@@ -103,7 +102,7 @@
                         <img class="img-fluid" src="/staticfiles/img/niagara.jpg" alt="">
                     </div>
                     <div class="desc">
-                        <a href="{% url 'app:niagara' %}" class="price-btn">$350</a>
+                        <a href="{% url 'app:niagara' %}" class="price-btn">Know more</a>
                         <h4>Niagara Falls</h4>
                         <p>Niagara</p>
                     </div>
@@ -116,7 +115,7 @@
                         <img class="img-fluid" src="/staticfiles/img/quebec.jpg" alt="">
                     </div>
                     <div class="desc">
-                        <a href="{% url 'app:quebec' %}" class="price-btn">$450</a>
+                        <a href="{% url 'app:quebec' %}" class="price-btn">Know more</a>
                         <h4>Quebec</h4>
                         <p>Quebec</p>
                     </div>
@@ -129,7 +128,7 @@
                         <img class="img-fluid" src="/staticfiles/img/banff.jpg" alt="">
                     </div>
                     <div class="desc">
-                        <a href="{% url 'app:banff' %}" class="price-btn">$500</a>
+                        <a href="{% url 'app:banff' %}" class="price-btn">know more</a>
                         <h4>Banff</h4>
                         <p>Alberta</p>
                     </div>
@@ -147,102 +146,82 @@
         <div class="row d-flex justify-content-center">
             <div class="menu-content pb-70 col-lg-8">
                 <div class="title text-center">
-                    <h1 class="mb-10">We Provide Affordable Prices</h1>
-                    <p>Well educated, intellectual people, especially scientists at all times demonstrate
-                        considerably.</p>
+                    <h1 class="mb-10">Explore Packages</h1>
+                    <p>Create memories with our exciting packages!</p>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-4">
-                <div class="single-price">
-                    <h4>Cheap Packages</h4>
-                    <ul class="price-list">
-                        <li class="d-flex justify-content-between align-items-center">
-                            <span>Serene hiking trails in Ontario</span>
-                            <a href="#" class="price-btn">$800</a>
-                        </li>
-                        <li class="d-flex justify-content-between align-items-center">
-                            <span>Banff National Park</span>
-                            <a href="#" class="price-btn">$850</a>
-                        </li>
-                        <li class="d-flex justify-content-between align-items-center">
-                            <span>Niagara Falls</span>
-                            <a href="#" class="price-btn">$750</a>
-                        </li>
-                        <li class="d-flex justify-content-between align-items-center">
-                            <span>Vancouver's scenic bays</span>
-                            <a href="#" class="price-btn">$900</a>
-                        </li>
-                        <li class="d-flex justify-content-between align-items-center">
-                            <span>Montreal</span>
-                            <a href="#" class="price-btn">$950</a>
-                        </li>
-                        <li class="d-flex justify-content-between align-items-center">
-                            <span>Island worlds in Nova Scotia</span>
-                            <a href="#" class="price-btn">$690</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-4">
+            <div style="margin-left: 115px" class="col-lg-4">
                 <div class="single-price">
                     <h4>Luxury Packages</h4>
                     <ul class="price-list">
                         <li class="d-flex justify-content-between align-items-center">
-                            <span>New York</span>
-                            <a href="#" class="price-btn">$1500</a>
+                            <span>Serene hiking trails in Ontario</span>
+                            {#                            <a href="#" class="price-btn">$800</a>#}
+                            <a href="{% url 'app:package' %}" class="price-btn">View</a>
                         </li>
                         <li class="d-flex justify-content-between align-items-center">
-                            <span>Maldives</span>
-                            <a href="#" class="price-btn">$1500</a>
+                            <span>Banff National Park</span>
+                            {#                            <a href="#" class="price-btn">$850</a>#}
+                            <a href="{% url 'app:package' %}" class="price-btn">View</a>
                         </li>
                         <li class="d-flex justify-content-between align-items-center">
-                            <span>Sri Lanka</span>
-                            <a href="#" class="price-btn">$1500</a>
+                            <span>Niagara Falls</span>
+                            {#                            <a href="#" class="price-btn">$750</a>#}
+                            <a href="{% url 'app:package' %}" class="price-btn">View</a>
                         </li>
                         <li class="d-flex justify-content-between align-items-center">
-                            <span>Nepal</span>
-                            <a href="#" class="price-btn">$1500</a>
+                            <span>Corner Brook</span>
+                            {#                            <a href="#" class="price-btn">$900</a>#}
+                            <a href="{% url 'app:package' %}" class="price-btn">View</a>
                         </li>
                         <li class="d-flex justify-content-between align-items-center">
-                            <span>Thiland</span>
-                            <a href="#" class="price-btn">$1500</a>
+                            <span>Montreal</span>
+                            {#                            <a href="#" class="price-btn">$950</a>#}
+                            <a href="{% url 'app:package' %}" class="price-btn">View</a>
                         </li>
                         <li class="d-flex justify-content-between align-items-center">
-                            <span>Singapore</span>
-                            <a href="#" class="price-btn">$1500</a>
+                            <span>Island worlds in Nova Scotia</span>
+                            {#                            <a href="#" class="price-btn">$690</a>#}
+                            <a href="{% url 'app:package' %}" class="price-btn">View</a>
                         </li>
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div style="margin-left: 115px" class="col-lg-4">
                 <div class="single-price">
                     <h4>Camping Packages</h4>
                     <ul class="price-list">
                         <li class="d-flex justify-content-between align-items-center">
-                            <span>New York</span>
-                            <a href="#" class="price-btn">$1500</a>
+                            <span>Algonquin Provincial Park</span>
+                            <a href="{% url 'app:package' %}" class="price-btn">View</a>
+                            {#                            <a href="#" class="price-btn">$1500</a>#}
                         </li>
                         <li class="d-flex justify-content-between align-items-center">
-                            <span>Maldives</span>
-                            <a href="#" class="price-btn">$1500</a>
+                            <span>Sandbanks Provincial Park</span>
+                            <a href="{% url 'app:package' %}" class="price-btn">View</a>
+                            {#                            <a href="#" class="price-btn">$1500</a>#}
                         </li>
                         <li class="d-flex justify-content-between align-items-center">
-                            <span>Sri Lanka</span>
-                            <a href="#" class="price-btn">$1500</a>
+                            <span>Tobermory</span>
+                            <a href="{% url 'app:package' %}" class="price-btn">View</a>
+                            {#                            <a href="#" class="price-btn">$1500</a>#}
                         </li>
                         <li class="d-flex justify-content-between align-items-center">
-                            <span>Nepal</span>
-                            <a href="#" class="price-btn">$1500</a>
+                            <span>Quetico Provincial Park</span>
+                            <a href="{% url 'app:package' %}" class="price-btn">View</a>
+                            {#                            <a href="#" class="price-btn">$1500</a>#}
                         </li>
                         <li class="d-flex justify-content-between align-items-center">
-                            <span>Thiland</span>
-                            <a href="#" class="price-btn">$1500</a>
+                            <span>Thousand Islands</span>
+                            <a href="{% url 'app:package' %}" class="price-btn">View</a>
+                            {#                            <a href="#" class="price-btn">$1500</a>#}
                         </li>
                         <li class="d-flex justify-content-between align-items-center">
-                            <span>Singapore</span>
-                            <a href="#" class="price-btn">$1500</a>
+                            <span>Pukaskwa National Park</span>
+                            <a href="{% url 'app:package' %}" class="price-btn">View</a>
+                            {#                            <a href="#" class="price-btn">$1500</a>#}
                         </li>
                     </ul>
                 </div>
@@ -260,7 +239,7 @@
             <div class="menu-content pb-70 col-lg-9">
                 <div class="title text-center">
                     <h1 class="mb-10">Other issues we can help you with</h1>
-                    <p>We all live in an age that belongs to the young at heart. Life that is.</p>
+{#                    <p>We all live in an age that belongs to the young at heart. Life that is.</p>#}
                 </div>
             </div>
         </div>
@@ -274,7 +253,8 @@
                         <h4>Rent a Car</h4>
                     </a>
                     <p>
-                        "The joy of renting a car is that you can explore at your own pace and discover places you never would have found otherwise."
+                        "The joy of renting a car is that you can explore at your own pace and discover places you never
+                        would have found otherwise."
                     </p>
                 </div>
             </div>
@@ -287,7 +267,8 @@
                         <h4>Cruise Booking</h4>
                     </a>
                     <p>
-                        "Cruising is the ultimate vacation experience. All your needs and wants are taken care of while you sail from one beautiful port to another."
+                        "Cruising is the ultimate vacation experience. All your needs and wants are taken care of while
+                        you sail from one beautiful port to another."
                     </p>
                 </div>
             </div>
@@ -328,8 +309,8 @@
                     Feel free to ask us. <br>
                     We‘ll make it for you
                 </h1>
-                <p>Customized travel packages tailored to your needs</p>
-                <a href="{% url 'app:contact' %}" class="primary-btn text-uppercase">request custom price</a>
+                <p>Customized travel packages </p>
+                <a href="{% url 'app:contact' %}" class="primary-btn text-uppercase">Contact Us</a>
             </div>
             <div class="col-lg-6 col-md-12 home-about-right no-padding">
                 <img class="img-fluid" src="/staticfiles/img/about-img.jpg" alt="">
@@ -341,45 +322,21 @@
 
 
 <!-- start footer Area -->
-<footer class="footer-area section-gap">
-    <div class="container">
+ <footer class="footer-area section-gap">
+        <div class="container">
 
-        <div class="row">
-            <div class="col-lg-3  col-md-6 col-sm-6">
-                <div class="single-footer-widget">
-                    <h6>About Traveloholic</h6>
-                    <p>"Traveling – it leaves you speechless, then turns you into a storyteller. You see things you never imagined seeing, you learn things you never knew you needed to learn, and you meet people you never thought you’d meet. It’s an adventure, a journey, a way to escape the mundane and embrace the unknown, discover yourself, to challenge your limits, and to find your place in the world."</p>
+            <div class="row">
+                    <div class="single-footer-widget">
+                        <h6>About Travelohilic</h6>
+                        <p>
+                            The world has become so fast-paced that people don’t want to stand by reading a page of
+                            information, they would much rather look at a presentation and understand the message. It
+                            has come to a point
+                        </p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-                <div class="single-footer-widget">
-                    <h6>Navigation Links</h6>
-                    <div class="row">
-                        <div class="col">
-                            <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Feature</a></li>
-                                <li><a href="#">Services</a></li>
-                                <li><a href="#">Portfolio</a></li>
-                            </ul>
-                        </div>
-                        <div class="col">
-                            <ul>
-                                <li><a href="#">Team</a></li>
-                                <li><a href="#">Pricing</a></li>
-                                <li><a href="#">Blog</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
         </div>
-
-    </div>
-</footer>
+    </footer>
 <!-- End footer Area -->
 <script src="{% static 'js/vendor/jquery-2.2.4.min.js' %}"></script>
 <script src="{% static 'js/popper.min.js' %}"></script>
