--- a/app/templates/app/register.html
+++ b/app/templates/app/register.html
@@ -54,8 +54,8 @@
                 <input type="text" name="email" required class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
             <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input type="password" name="password" required class="form-control" id="exampleInputPassword1">
+                <label for="exampleInputPassword1"  class="form-label">Password</label>
+                <input type="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" name="password" required class="form-control" id="exampleInputPassword1">
             </div>
             <button type="submit" style="alignment-baseline: center" class="primary-btn text-uppercase">Register
             </button>
