--- a/staticfiles/css/main.css
+++ b/staticfiles/css/main.css
@@ -4543,7 +4543,7 @@ h1.mb-10 {
 }
 button.Book.Now-btn {
     color: white;
-    background: #c2e1e8;
+    background: darkblue;
     padding: 5px 15px;
     /* text-align: -webkit-match-parent; */
     margin: auto;
