--- a/app/templates/app/hotels.html
+++ b/app/templates/app/hotels.html
@@ -20,7 +20,7 @@
     </section>
     <!-- End banner Area -->
     <div class=" px-4  align-items-center" style="padding-left: 100px; padding-right: 100px">
-        <form class="align-items-center" action="search_hotels" method="POST">
+        <form class="align-items-center"  method="POST">
             {% csrf_token %}
             <div class="row justify-content-center">
 
