--- a/app/templates/app/book.html
+++ b/app/templates/app/book.html
@@ -8,34 +8,50 @@
 
 <body>
 {% block start %}
-    <section class="form-payment" style="margin-top:30px;padding:50px; line-height:30px;">
-
+    {#    <section class="form-payment" style="margin-top:30px;padding:50px; line-height:30px;">#}
+    <section class="relative about-banner">
+        <div class="overlay overlay-bg"></div>
         <div class="container">
-            <form id="bookingForm"  style="margin-top: 30px"
-                  method="POST">
-                <h2 class="text-white">Book Your Hotel Here</h2>
-                {% csrf_token %}
-                {% include 'app/messages.html' %}
-                {{ form1.as_p }}
-
-                        <button name="btnS" class="genric-btn primary center"
-                                style="float: right;margin-top: 20px;margin-right: 550px;" type="submit">BOOK NOW
-                        </button>
-{#                    </div>#}
-{#                </div>#}
-            </form>
-
+            <div class="row d-flex align-items-center justify-content-center">
+                <div class="about-content col-lg-12">
+                    <h1 class="text-white">
+                        Book your Hotel
+                    </h1>
+                    {#                    <p class="text-white link-nav"><a href="{% url 'app:index' %}">Home </a> <span#}
+                    {#                            class="lnr lnr-arrow-right"></span> <a href={% url 'app:contact' %}> Contact Us</a></p>#}
+                </div>
+            </div>
         </div>
-
-{#        <p id="demo"></p>#}
-
-{#        <script>#}
-{#            function myFunction() {#}
-{##}
-{#                document.getElementById("demo").innerHTML = "PAYMENT IS DISABLED DUE TO SECURITY REASONS ";#}
-{#            }#}
-{#        </script>#}
     </section>
+    <div class="container" style="padding-right: 200px; padding-left: 200px">
+        <form id="bookingForm" style="margin-top: 30px"
+              method="POST">
+            <h2 class="text-white">Book Your Hotel Here</h2>
+            {% csrf_token %}
+            {% include 'app/messages.html' %}
+            {{ form1.as_p }}
+            <div class="center">
+                <input name="btnS" class="center genric-btn primary " type="submit" value="Book Now">
+            </div>
+            {#            <button #}
+            {#                    #}
+            {#            </button>#}
+            <br><br><br><br>
+            {#                    </div>#}
+            {#                </div>#}
+        </form>
+
+    </div>
+
+    {#        <p id="demo"></p>#}
+
+    {#        <script>#}
+    {#            function myFunction() {#}
+    {##}
+    {#                document.getElementById("demo").innerHTML = "PAYMENT IS DISABLED DUE TO SECURITY REASONS ";#}
+    {#            }#}
+    {#        </script>#}
+    {#    </section>#}
 {% endblock %}
 </body>
 </html>
