package html changed again

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -76,7 +76,7 @@
                     We take care of your travel and do our best to make sure you get the best journey
                 </p>
                 <h3 class="h3 text-white">It's Time To Travel Canada</h3><br><br>
-                <a href="{% url 'app:hotel' %}" class="primary-btn text-uppercase">Get Started</a>
+                <a href="{% url 'app:hotels' %}" class="primary-btn text-uppercase">Get Started</a>
             </div>
         </div>
     </div>
