--- a/app/templates/app/book.html
+++ b/app/templates/app/book.html
@@ -24,20 +24,18 @@
         </div>
     </section>
     <div class="container" style="padding-right: 200px; padding-left: 200px">
-        <form id="bookingForm" style="margin-top: 30px"
+        <form id="bookingForm" style="margin-top: 30px" action=""
               method="POST">
             <h2 class="text-white">Book Your Hotel Here</h2>
             {% csrf_token %}
             {% include 'app/messages.html' %}
-            <h2> {{ msg1 }}</h2>
-            <h2> {{ msg2 }}</h2>
-            <h2> {{ msg3 }}</h2>
             {{ form1.as_p }}
             <div class="center">
                 <input name="btnS" class="center genric-btn primary " type="submit" value="Book Now">
             </div>
             <br><br><br><br>
         </form>
+
 
     </div>
 
