package and hotel html changes

--- a/app/templates/app/confirm1.html
+++ b/app/templates/app/confirm1.html
@@ -20,9 +20,11 @@
     <body>
     <div class="container" style="padding-right: 200px; padding-left: 200px">
         <br><br><br><br>
+        <h2>{{ package_objs.package_price }}</h2>
         <h3> {{ msg1 }}</h3><br>
         <h3> {{ msg2 }}</h3><br>
         <h3> {{ msg3 }}</h3><br>
+{#        <h3>{{ msg4 }}</h3>#}
         <br><br><br><br>
     </div>
     </body></html>
