edited index, book, forms.py

--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -33,7 +33,8 @@
                     <p>
                         We are a small scale start-up, and we pledge to serve our very best to all the customers we get and
                         get the best packages at affordable prices.
-                        you can travel all over canada with us
+                        You can Travel all over canada with us!
+                        We will soon start international Trips! Stay Tuned!
                     </p>
                     <h3 class="h3">You can trust us blindly, as you've chosen wisely</h3>
                 </div>
