--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -329,9 +329,7 @@
                     <div class="single-footer-widget">
                         <h6>About Travelohilic</h6>
                         <p>
-                            The world has become so fast-paced that people don’t want to stand by reading a page of
-                            information, they would much rather look at a presentation and understand the message. It
-                            has come to a point
+                            “The journey of a thousand miles begins with a single step.” - Suparno Bhatta
                         </p>
                 </div>
             </div>
