--- a/app/templates/app/hotels.html
+++ b/app/templates/app/hotels.html
@@ -116,9 +116,7 @@
                         We‘ll make it for you
                     </h1>
                     <p>
-                        inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct
-                        standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on
-                        the job is beyond reproach. inappropriate behavior is often laughed.
+                        “The journey of a thousand miles begins with a single step.” - Suparno Bhatta
                     </p>
                     <a href="{% url 'app:contact' %}" class="primary-btn text-uppercase">request custom price</a>
                 </div>
