--- a/app/templates/app/hotels.html
+++ b/app/templates/app/hotels.html
@@ -113,10 +113,7 @@
                         Feel free to ask us. <br>
                         We‘ll make it for you
                     </h1>
-                    <p>
-                        “The journey of a thousand miles begins with a single step.” - Suparno Bhatta
-                    </p>
-                    <a href="{% url 'app:contact' %}" class="primary-btn text-uppercase">request custom price</a>
+                    <a href="{% url 'app:contact' %}" class="primary-btn text-uppercase">Contact Us to Request Custom Price</a>
                 </div>
                 <div class="col-lg-6 col-md-12 home-about-right no-padding">
                     <img class="img-fluid" src="/staticfiles/img/hotels/about-img.jpg" alt="">
