Updated search functionality

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -96,7 +96,7 @@
                     <div class="single-footer-widget">
                         <h6>About Travelohilic</h6>
                         <p>
-                            “The journey of a thousand miles begins with a single step.” - Suparno Bhatta
+                            “The journey of a thousand miles begins with a single step.” We are excited to provide you with a seamless and personalized travel experience. Whether you're looking to explore a tourist attraction in a different city of Canada, browse through photos and descriptions, booking hotel reservations, or embark on an exciting adventure having various interesting packages, we have everything you need to plan the perfect trip.
                         </p>
                 </div>
             </div>
