--- a/app/templates/app/packages.html
+++ b/app/templates/app/packages.html
@@ -18,7 +18,26 @@
         </div>
     </section>
     <!-- End banner Area -->
+ <div class=" px-4  align-items-center" style="padding-left: 100px; padding-right: 100px">
+        <form class="align-items-center" action="search_packages"  method="POST">
+            {% csrf_token %}
+            <div class="row justify-content-center">
 
+                <div class="col-md-2 justify-content-center">
+                    <div class="form-inline" style="flex-wrap:nowrap">
+                        <label style="margin:10px;font-weight: 600;font-size: 20px;color: black"
+                               for="exampleFormControlSelect1">Search</label>
+                        <input name="search" class="form-control" value="{{ search }}" placeholder="Search City">
+                        <button type="submit" class="primary-btn text-uppercase">Find</button>
+                    </div>
+
+                </div>
+            </div>
+
+        </form>
+
+
+    </div>
     <!-- Start hot-deal Area -->
     <section class="hot-deal-area section-gap">
         <div class="container">
